CSS reorganization and split for easy readability, and enhancements for BS3. Switch to `Source Sans Pro` font. Fix the source-selector appearance with BS3, and the navbar on mobile devices (it's less cool than before, but at least it works; more to come on the navbar side).

--- a/oneflow/core/static/sass/1flow/_home.scss
+++ b/oneflow/core/static/sass/1flow/_home.scss
@@ -48,7 +48,7 @@ body {
 
     .navbar-nav {
 
-        font-size: 120%;
+        //font-size: 120%;
 
         /*  For some reason, <i> only in span is not happily
             aligned with 1flow logo and user avatar. */
