--- a/oneflow/core/static/sass/detail-admin/bootstrap-overrides-bs2.scss
+++ b/oneflow/core/static/sass/detail-admin/bootstrap-overrides-bs2.scss
@@ -64,7 +64,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "Open Sans", Arial;
+  font-family: "Source Sans Pro", "Open Sans", Arial;
 }
 input[type="text"],
 input[type="password"],
@@ -157,21 +157,21 @@ input[disabled], textarea[disabled], input[readonly], textarea[readonly] {
 input:-moz-placeholder,
 textarea:-moz-placeholder {
   color: #9ba0a5;
-  font-family: "Open Sans", Arial;
+  font-family: "Source Sans Pro", "Open Sans", Arial;
   font-size: 13px;
 }
 
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
   color: #9ba0a5;
-  font-family: "Open Sans", Arial;
+  font-family: "Source Sans Pro", "Open Sans", Arial;
   font-size: 12px;
 }
 
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
   color: #9ba0a5;
-  font-family: "Open Sans", Arial;
+  font-family: "Source Sans Pro", "Open Sans", Arial;
   font-size: 12px;
 }
 
